--- a/factory/iot-dashboard/app/dashboard.html
+++ b/factory/iot-dashboard/app/dashboard.html
@@ -13,6 +13,9 @@
     <body>
         <h1 class="header">Factory IoT Dashboard</h1>
         <div id="container"></div>
+        <div id="controls">
+            <button id="button1">Send Command</button>
+        </div>
         <script>const $ = require('jquery');</script>
         <script src="dashboard.js"></script>
     </body>
