added configuration for gateway

--- a/factory/iot-dashboard/app/dashboard.html
+++ b/factory/iot-dashboard/app/dashboard.html
@@ -14,7 +14,7 @@
         <h1 class="header">Factory IoT Dashboard</h1>
         <div id="container"></div>
         <div id="controls">
-            <button id="button1">Send Command</button>
+            <button id="button1">Disable device_1</button>
         </div>
         <script>const $ = require('jquery');</script>
         <script src="dashboard.js"></script>
